# Berrysoft.github.io

./: .gitattributes  .gitignore  404.html  Berrysoft.Pages.sln  Cargo.toml  LICENSE  Makefile.toml  README.md  READNE.md  Trunk.toml  azure-pipelines.yml  base.css  build.rs  index.html  package.json  pages-16f0013e047466bc.js  pages-16f0013e047466bc_bg.wasm  pages-353f255c74e19e63.js  pages-353f255c74e19e63_bg.wasm  pages-6364b49fbc0a47be.js  pages-6364b49fbc0a47be_bg.wasm  pages-c56f8088c6c38b1b.js  pages-c56f8088c6c38b1b_bg.wasm  pages-ca38a128f9727b18.js  pages-ca38a128f9727b18_bg.wasm  pages-e9ad09f0c9527c25.js  pages-e9ad09f0c9527c25_bg.wasm  wasm.js  wasm_bg.wasm
Berrysoft.Pages/: App.razor  Berrysoft.Pages.csproj  Program.cs  Startup.cs  StringIgnoreCaseComparer.cs  _Imports.razor  bundleconfig.json
Berrysoft.Pages.Blog/: Berrysoft.Pages.Blog.csproj  Program.cs
Berrysoft.Pages/Data/: BlogService.cs  CounterService.cs  DataLoaderService.cs  GitHubEventService.cs  ICounterService.cs  IDataLoaderService.cs  ILocalizationService.cs  IProjectService.cs  LibraryService.cs  LinkService.cs  LocalStorage.cs  LocalizationService.cs  ProjectBox.cs  ProjectService.cs  SemaphoreLocker.cs  TeaService.cs  ThemeService.cs
Berrysoft.Pages/DataGrid/: DataGrid.razor  DataGridBase.cs  DataGridHeader.razor  DataGridSortDirection.cs
Berrysoft.Pages/HighlightJs/: HighlightJsCodeBlockRenderer.cs  HighlightJsEngine.cs  HighlightJsExtension.cs  HighlightJsExtensions.cs  IHighlightJsEngine.cs  README.md
Berrysoft.Pages/KanaLearn/: Controller.cs  RandomHelper.cs
Berrysoft.Pages/Katex/: IKatexEngine.cs  KatexEngine.cs  KatexExtension.cs  KatexExtensions.cs  KatexHtmlMathBlockRenderer.cs  KatexHtmlMathInlineRenderer.cs
Berrysoft.Pages/Pages/: About.razor  Blog.razor  BlogDetail.razor  BlogPost.razor  Counter.razor  Index.razor  KanaLearn.razor  TeaOnline.razor
Berrysoft.Pages/Shared/: DataGrid.razor  DataGridHeader.razor  DataGridSortDirection.cs  LangLink.razor  MainLayout.razor  NavFooter.razor  NavMenu.razor  NotFoundComponent.razor  Tred.razor
Berrysoft.Pages/wwwroot/: index.html
_framework/: blazor.boot.json
blog/: Cargo.toml
blog/src/: main.rs
blogdata/: 20190906_First.md  20190922_XXTea.md  20190925_Gains.md  20191012_Gains.md  20200725_Graph.md  20201012_Darling.md  20210423_Rust.md  20210819_Image.md  20220606_POSIX.md  20220609_National.md  20230106_Summary.md  20240612_Server.md  20241231_Fish.md  20260306_Compio.md  20260306_Fish.md  Image_2021_8_19.md  ROOT_2019_12_2.md  X11_2020_7_24.md  feed.xml  titles.txt
css/: site.css
data/: libraries.json  links.json  projects.json
i18n/: index.json  strings.json  strings.zh-hans.json
js/: site.js
src/: about.rs  fetch.rs  footer.rs  github.rs  header.rs  index.rs  lib.rs  main.rs  tred.rs
src/blog/: detail.rs  mod.rs
src/data/: blog.rs  (+4 more)
static/: .gitignore  README.md  index.html
(+60 files in other folders)
