[package]
name = "pages"
version = "0.1.1"
edition = "2018"
description = "Berrysoft's personal site."
repository = "https://github.com/Berrysoft/Berrysoft.github.io.git"
license = "MIT"

[workspace]
members = ["blog"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
log = "0.4"
wasm-logger = "0.2"
yew = "0.19"
yew-router = "0.16"
gloo-utils = "0.1"
reqwasm = "0.5"
wee_alloc = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
rss = "2.0"
pulldown-cmark = { version = "0.9", default-features = false }
url = "2.2"

[profile.release]
lto = true
