[package]
name = "pages"
version = "0.1.3"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
edition = "2021"
description = "Berrysoft's personal site."
repository = "https://github.com/Berrysoft/Berrysoft.github.io.git"
license = "MIT"

[dependencies]
wasm-bindgen = "0.2"
log = "0.4"
wasm-logger = "0.2"
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
gloo-utils = "0.2"
reqwasm = "0.5"
lol_alloc = "0.4"
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "serde",
] }
serde = "1.0"
serde_json = "1.0"
rss = { version = "2.0", default-features = false }
pulldown-cmark = { version = "0.11", features = [
    "html",
], default-features = false }
url = "2.3"

[build-dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
] }
rss = { version = "2.0", default-features = false, features = ["builders"] }
pulldown-cmark = { version = "0.11", default-features = false }

[profile.release]
lto = true
